--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -5,3 +5,8 @@ http_server:
   timeout: 4s
   idle_timeout: 30s
   user: "gabr"
+client:
+  sso:
+    address: "localhost:44044"
+    timeout: 5s
+    retriesCount: 3
