--- a/deployment/url-shortener.service
+++ b/deployment/url-shortener.service
@@ -3,13 +3,13 @@ Description=URL Shortener
 After=network.target
 
 [Service]
-User=root
-WorkingDirectory=/root/apps/url-shortener
-ExecStart=/root/apps/url-shortener/url-shortener
+User=gabr
+WorkingDirectory=/gabr/apps/url-shortener
+ExecStart=/gabr/apps/url-shortener/url-shortener
 Restart=always
 RestartSec=4
 StandardOutput=inherit
-EnvironmentFile=/root/apps/url-shortener/config.env
+EnvironmentFile=/gabr/apps/url-shortener/config.env
 
 [Install]
 WantedBy=multi-user.target
