--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,9 @@ services:
     build: .
     image: kelbri/url-shortener:latest
     ports:
-        - "8082:8082"
+      - "8082:8082"
+    environment:
+      - CONFIG_PATH=./config/prod.yaml
     env_file:
       - .env
     volumes:
