--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,6 +44,11 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.DEPLOY_SSH_KEY }}
 
+      - name: Copy docker-compose.yaml to remote server
+        run: |
+          scp docker-compose.yaml gabr@89.169.167.200:/apps/url-shortener
+
+
       - name: Deploy
         run: |
           ssh -o StrictHostKeyChecking=no gabr@89.169.167.200 << EOF
