--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,10 +44,13 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.DEPLOY_SSH_KEY }}
 
+      - name: Disable strict host key checking
+        run: |
+          echo -e "Host 89.169.167.200\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+
       - name: Copy docker-compose.yaml to remote server
         run: |
           scp docker-compose.yaml gabr@89.169.167.200:/apps/url-shortener
-
 
       - name: Deploy
         run: |
