--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -55,7 +55,7 @@ jobs:
       - name: Add user to docker group on remote server
         run: |
           ssh -o StrictHostKeyChecking=no gabr@89.169.167.200 << EOF
-          sudo usermod -aG docker $USER
+          sudo usermod -aG docker gabr
           newgrp docker
           EOF    
 
