--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -54,15 +54,8 @@ jobs:
 
       - name: Add user to docker group on remote server
         run: |
-          ssh -o StrictHostKeyChecking=no gabr@89.169.167.200 << EOF
-          sudo usermod -aG docker gabr
-          newgrp docker
-          EOF    
+          ssh -o StrictHostKeyChecking=no gabr@89.169.167.200 "sudo usermod -aG docker gabr && newgrp docker"
 
       - name: Deploy
         run: |
-          ssh -o StrictHostKeyChecking=no gabr@89.169.167.200 << EOF
-          docker-compose down
-          docker pull kelbri/url-shortener:latest
-          docker-compose up -d
-          EOF
+          ssh -o StrictHostKeyChecking=no gabr@89.169.167.200 "docker-compose down && docker pull kelbri/url-shortener:latest && docker-compose up -d"
