--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,4 +58,5 @@ jobs:
 
       - name: Deploy
         run: |
-          ssh -o StrictHostKeyChecking=no gabr@89.169.167.200 "docker-compose down && docker pull kelbri/url-shortener:latest && docker-compose up -d"
+          ssh -o StrictHostKeyChecking=no gabr@89.169.167.200 "cd ~/apps/url-shortener && docker-compose down && docker pull ***/url-shortener:latest && docker-compose up -d"
+
