--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,9 @@
 services:
   url-shortener:
     build: .
-    image: kelbri/url-shortener:latest
+    image: kelbri/url-shortener:0.0.1
     ports:
-      - "8082:8082"
-    environment:
-      - CONFIG_PATH=./config/prod.yaml
+      - 8082:8082
     env_file:
       - .env
     volumes:
