--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,32 @@
 services:
+
   url-shortener:
     build: .
-    image: kelbri/url-shortener:0.0.1
-    ports:
-      - 8082:8082
+    image: kelbri/url-shortener:0.0.2
+    container_name: url-shortener
+    restart: always
     env_file:
       - .env
     volumes:
       - ./config:/config
+      - ./storage:/storage
+    ports:
+      - 8082:8082
+      - 8081:8081
+    networks:
+      - monitoring
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: always
+    volumes:
+      - ./prometheus.yml:/etc/prometheus
+    ports:
+      - 19090:9090
+    networks:
+      - monitoring
+
+networks:
+  monitoring:
+    driver: bridge
